<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_place_24"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_editar" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/menu_eliminar" />

    </group>
</menu>