<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/textView001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/textView001"
        android:textColor="@color/black_700"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView002"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/nunito_bold"
        android:text="@string/textView002"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView001" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout001"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_regular"

        android:hint="@string/textInputLayout001"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"

        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/amarillo_700"
        app:hintTextColor="@color/amarillo_700"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_700"
            android:textColorHint="@color/amarillo_700"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout002"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/textInputLayout002"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"

        app:boxStrokeColor="@color/amarillo_700"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/amarillo_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout001">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText002"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:inputType="textPassword"
            android:textColor="@color/black_700"
            android:textColorHint="@color/amarillo_700"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button001"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:gravity="center"
        android:text="@string/button001"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout002" />


    <Button
        android:id="@+id/button002"

        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="255dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:gravity="center"
        android:text="@string/button002"
        android:textAllCaps="false"

        android:textColor="@color/amarillo_700"
        android:textSize="15sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button001"
        app:strokeColor="#00FFFFFF" />

    <TextView
        android:id="@+id/textView003"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/textView003"
        android:textColor="@color/black_500"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button002"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView004"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:fontFamily="@font/nunito_extra_bold"
        android:text="@string/textView004"
        android:textColor="@color/amarillo_700"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView003"
        app:layout_constraintTop_toBottomOf="@+id/button002"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>